syntax = "proto3";

package istio.mixer.adapter.quota;

import "mixer/adapter/model/v1beta1/extensions.proto";
import "policy/v1beta1/type.proto";

option (istio.mixer.adapter.model.v1beta1.template_variety) = TEMPLATE_VARIETY_QUOTA;

// template ...
message Template {
    // dimensions are ...
    map<string, istio.policy.v1beta1.Value> dimensions = 1;

    int64 int64Primitive = 3;

    bool boolPrimitive = 4;

    double doublePrimitive = 5;

    string stringPrimitive = 6;

    istio.policy.v1beta1.Value anotherValueType = 7;

    map<string, int64> dimensionsFixedInt64ValueDType = 8;

    istio.policy.v1beta1.TimeStamp timeStamp = 9;

    istio.policy.v1beta1.Duration duration = 10;
}
